<resources>
    <string name="app_name">AircraftWar</string>
    <string name="MediumGame">普通模式</string>
    <string name="EasyGame">简单模式</string>
    <string name="HardGame">困难模式</string>
    <string name="singleModel">单机模式</string>
    <string name="onlineModel">联机模式</string>
    <string name="music">音量</string>
    <string name="have_video">音效</string>
    <string name="difficultyChoice">难度：%1$s</string>
    <string name="name">姓名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="start_game">开始游戏</string>
    <string name="host">HOST地址</string>
    <string name="DefaultHost">192.168.56.1</string>
    <string-array name="modelArray">
        <item>简单模式</item>
        <item>普通模式</item>
        <item>困难模式</item>
    </string-array>
</resources>